--- a/CWT_suppl.rmd
+++ b/CWT_suppl.rmd
@@ -217,8 +217,8 @@ Run CWT
 tmp<-wt (d=d,pad = pad, dt = dt,  dj = dj, s0 = s0,  mother=mother, lag1=0.72, do.sig=F)
 ```
 
-#Assess CWT surface
-
+Assess CWT surface
+```{r}
 plot(tmp)
 ```
 
@@ -244,73 +244,58 @@ insamp<-c()
 insamp2<-c()
 Peaks_all<-c()
 for (i in 1:length(Time)) {
-    I_pksA=matrix(0, 1,5); 
-
-    Peaks=findpeaks(red_power[,i]);
-	if (is.null(Peaks)) Peaks<-	matrix(c(max(red_power[,i]), which.max(red_power[,i]),0,0), ncol=4, nrow=1)
-	
-	Peaks_all<-rbind(Peaks_all, cbind(Peaks, i))
-	
+    I_pksA=matrix(0, 1,5)
+    Peaks=findpeaks(red_power[,i])
+    if (is.null(Peaks)) Peaks<- matrix(c(max(red_power[,i]), 
+	                which.max(red_power[,i]),0,0), ncol=4, nrow=1)
+    Peaks_all<-rbind(Peaks_all, cbind(Peaks, i))
     pks=Peaks[,1]
     loc=Peaks[,2]
-	
-	s_pks=sort(pks,decreasing=T);
-	I_pks=order(pks,decreasing=T);
-    
+    s_pks=sort(pks,decreasing=T)
+    I_pks=order(pks,decreasing=T)
     for (ki in 1:length(I_pks)) {
         I_pksA[ki]=I_pks[ki];
     }
-    
-    
     if(I_pksA[1]==0)   {     
-         maxpower=max(red_power[,i]);
-         posfreq1=which.max(red_power[,i]);
-              
+        maxpower=max(red_power[,i]);
+        posfreq1=which.max(red_power[,i]);
     } else {
-                  
-   posfreq1=loc[I_pks[1]];
-   maxpower=pks[I_pks[1]];
-     }
-     cf11=(variance*dt)/(Cdelta*red_scale[posfreq1]);
-     cf1=sqrt(cf11);
-     insamp=c(insamp, cf1*red_AP_real[posfreq1,i])
-     insamp2=c(insamp2, red_AP_real[posfreq1,i])
-        
+        posfreq1=loc[I_pks[1]];
+        maxpower=pks[I_pks[1]];
+    }
+    cf11=(variance*dt)/(Cdelta*red_scale[posfreq1]);
+    cf1=sqrt(cf11);
+    insamp=c(insamp, cf1*red_AP_real[posfreq1,i])
+    insamp2=c(insamp2, red_AP_real[posfreq1,i])
 }
-
 Peaks_all<-as.data.frame(Peaks_all)
 names(Peaks_all)<-c("val", "loc", "start", "end", "i")
-
-time_minp=0;
-dtmin=1;
+time_minp=0
+dtmin=1
 ```
 
 Find onsets of pre-alternate plumage molt (times, at which amplitude reverses from negative to positive) 
 
 ```{r, eval = F}
 timeOnset<-c()
-
 for ( i in 2:(length(insamp)-1)) {
    if((insamp[i-1]<=0)& (insamp[i]> 0)) {
-       timeOnset=c(timeOnset, Time[i]);      
+       timeOnset=c(timeOnset, Time[i])     
     }
 }
 ```
 
 Find offsets of pre-basic plumage molt (times, at which amplitude reverses from positive to negative)
-
 ```{r, eval = F}
 timeOffset<-c()
-
 for ( i in 2:(length(insamp)-1)) {
    if((insamp[i-1]>0)& (insamp[i]<=0)) {
-       timeOffset=c(timeOffset, Time[i]);      
+       timeOffset=c(timeOffset, Time[i])      
     }
 }
 ```
 
 Plot the results
-
 ```{r, eval = F}
 Onsetdate<-as.data.frame(Data$x[timeOnset])
 names(Onsetdate)<-"onset"
@@ -323,11 +308,9 @@ Offsetdate$Yr<-as.integer(substr(Offsetdate$offset,1,4))
 abline(v=Offsetdate$offset,col="blue")
 ```
 
-
 ###Correction of CWT-results
 
 The obtained with CWT results were visually assessed for irrelevantly defined  characteristic points, and the latter were removed manually. Load the manually processed data
-
 ```{r, eval = F}
 onoffsets<-read.csv("plumage_molt_dates.csv",stringsAsFactors=F)
 onoffsets$onsetdate<-as.Date(onoffsets$onsetdate,format="%m/%d/%Y")
@@ -336,89 +319,92 @@ onoffsets$offsetdate<-as.Date(onoffsets$offsetdate,format="%m/%d/%Y")
 
 Find the nearest to the defined with CWT onsets and offsets
 onset
-
 ```{r, eval = F}
 onoffsets$onsetcor<-as.Date(NA)
 for(i in 1:nrow(onoffsets)){
-if(!is.na(onoffsets$onsetdate[i])){
-onoffsets$onsetcor[i]<-example_data[which.min(abs(as.numeric(example_data$DATE)-as.numeric(onoffsets$onsetdate[i]))),]$DATE
-}
+   if(!is.na(onoffsets$onsetdate[i])){
+       onoffsets$onsetcor[i]<-example_data[which.min(abs(as.numeric(example_data$DATE)-
+       as.numeric(onoffsets$onsetdate[i]))),]$DATE
+   }
 }
 ```
 
 offset
-
 ```{r, eval = F}
 onoffsets$offsetcor<-as.Date(NA)
 for(i in 1:nrow(onoffsets)){
-if(!is.na(onoffsets$offsetdate[i])){
-onoffsets$offsetcor[i]<-example_data[which.min(abs(as.numeric(example_data$DATE)-as.numeric(onoffsets$offsetdate[i]))),]$DATE
-}
+    if(!is.na(onoffsets$offsetdate[i])){
+        onoffsets$offsetcor[i]<-example_data[which.min(abs(as.numeric(example_data$DATE)
+        -as.numeric(onoffsets$offsetdate[i]))),]$DATE
+    }
 }
 ```
 
 Although the CWT-defined onsets and offsets roughly represented the boundaries of the period between pre-alternate and pre-basic plumage molts, most of the times, they did not match, either the beginning or the end of these stages, precisely enough. Therefore, we used the CWT-defined characteristic points to find the actual dates of start and end of molts. 
-
 ```{r, eval = F}
 #make fields for the corrected onsets of pre-alternate molt and offsets of pre-basic molt
 onoffsets$onsetcor_1<-as.Date(NA)
 onoffsets$offsetcor_2<-as.Date(NA)
 
-#for each year (beginning from the second) take the period between the CWT-defined onset of pre-alternate molt and preceding (!) offset of pre-basic molt and define the most common molt score observed during the period (baseline score)
+#for each year (beginning from the second) take the period between the CWT-defined onset 
+#of pre-alternate molt and preceding (!) offset of pre-basic molt and define the most 
+#common molt score observed during the period (baseline score)
 
 for(i in 2:length(unique(onoffsets$Year))){ 
-onreal<-onoffsets[onoffsets$Year==unique(onoffsets$Year)[i],]$onsetcor
-off1real<-onoffsets[onoffsets$Year==unique(onoffsets$Year)[i-1],]$offsetcor
-
-plat<-example_data[example_data$DATE>=off1real & example_data$DATE<=onreal,]
-
-#if the period is not 0 and both, CWT-defined onset and offset exist, find the most common molt score within this period (the baseline)
-if (nrow(plat)>0 & !is.na(onreal) & !is.na(off1real)){
-
-nr<-data.frame(matrix(nrow=7,ncol=2)) # 
-for(b in 1:length(unique(plat$PLUM))){
-nr$X1[b]<-nrow(plat[plat$PLUM==unique(plat$PLUM)[b],])
-nr$X2[b]<-unique(plat$PLUM)[b]
-}
-nr<-nr[!is.na(nr$X1),]
-base<-min(nr[nr$X1==max(nr$X1),]$X2) 
-#if the baseline score is larger than 4 (rather bright plumage, which sometimes happened under constant photoperiod), set it to 4
-if (base>4){ 
-base<-4
-}
-
-#compare the molt scores at the CWT-defined dates of onset of pre-alternate molt with the baseline score
-
-if (onreal %in% example_data$DATE){
-#if the molt score on the CWT-defined date of onset of pre-alternate plumage molt is larger than baseline, re-set the onset date to the first earlier date, when molt score was equal the baseline value 
-if (example_data[example_data$DATE==onreal,]$PLUM>base){
-d<-rev(which(example_data$PLUM<=base & example_data$DATE<onreal))[1]
-onoffsets[onoffsets$Year==unique(onoffsets$Year)[i],]$onsetcor_1<-example_data$DATE[d]
-#otherwise, re-set the onset date to the last date after the cwt-defined onset, when the molt score was smaller than the baseline value
-} else {
-d<-which(example_data$PLUM>base & example_data$DATE>onreal)[1]-1
-onoffsets[onoffsets$Year==unique(onoffsets$Year)[i],]$onsetcor_1<-example_data$DATE[d]
-}
-} 
-
-#compare the molt scores at the CWT-defined dates of offset of pre-basic molt with the baseline score
-
-if ((off1real %in% example_data$DATE)){
-#if the molt score on the CWT-defined date of offset of pre-basic plumage molt is larger than baseline, re-set the offset date to the first date after the cwt-defined one, when molt score was equal to or smaller than the baseline value 
-if (example_data[example_data$DATE==off1real,]$PLUM>base){
-b<-which(example_data$PLUM<=base & example_data$DATE>off1real)[1]
-onoffsets[onoffsets$Year==unique(onoffsets$Year)[i-1],]$offsetcor_2<-example_data$DATE[b]
-#otherwise, re-set the offset date before the CWT-defined offset, to the next date after the last date, when the molt score was larger than the baseline value
-} else {
-b<-rev(which(example_data$PLUM>base & example_data$DATE<=off1real))[1]+1
-onoffsets[onoffsets$Year==unique(onoffsets$Year)[i-1],]$offsetcor_2<-example_data$DATE[b]
-}
-}
-#if the CWT-defined onset and/or offset date do not exist, or the period between them is 0, then set onset and offset dates as the cwt-defined onset and offset.
-} else {
-onoffsets[onoffsets$Year==unique(onoffsets$Year)[i],]$onsetcor_1<-onreal
-onoffsets[onoffsets$Year==unique(onoffsets$Year)[i-1],]$offsetcor_2<-off1real
-}
+    onreal<-onoffsets[onoffsets$Year==unique(onoffsets$Year)[i],]$onsetcor
+    off1real<-onoffsets[onoffsets$Year==unique(onoffsets$Year)[i-1],]$offsetcor
+    plat<-example_data[example_data$DATE>=off1real & example_data$DATE<=onreal,]
+    #if the period is not 0 and both, CWT-defined onset and offset exist,
+    #find the most common molt score within this period (the baseline)
+    if (nrow(plat)>0 & !is.na(onreal) & !is.na(off1real)){
+        nr<-data.frame(matrix(nrow=7,ncol=2)) # 
+        for(b in 1:length(unique(plat$PLUM))){
+            nr$X1[b]<-nrow(plat[plat$PLUM==unique(plat$PLUM)[b],])
+            nr$X2[b]<-unique(plat$PLUM)[b]
+        }
+        nr<-nr[!is.na(nr$X1),]
+        base<-min(nr[nr$X1==max(nr$X1),]$X2) 
+        #if the baseline score is larger than 4 (rather bright plumage, 
+        #which sometimes happened under constant photoperiod), set it to 4
+        if (base>4){ 
+        base<-4
+   }
+       #compare the molt scores at the CWT-defined dates of onset of pre-alternate molt with the baseline score
+       if (onreal %in% example_data$DATE){
+           #if the molt score on the CWT-defined date of onset of pre-alternate plumage molt 
+           #is larger than baseline, re-set the onset date to the first earlier date, 
+           #when molt score was equal the baseline value 
+           if (example_data[example_data$DATE==onreal,]$PLUM>base){
+               d<-rev(which(example_data$PLUM<=base & example_data$DATE<onreal))[1]
+               onoffsets[onoffsets$Year==unique(onoffsets$Year)[i],]$onsetcor_1<-example_data$DATE[d]
+               #otherwise, re-set the onset date to the last date after the cwt-defined onset,
+               #when the molt score was smaller than the baseline value
+           } else {
+              d<-which(example_data$PLUM>base & example_data$DATE>onreal)[1]-1
+              onoffsets[onoffsets$Year==unique(onoffsets$Year)[i],]$onsetcor_1<-example_data$DATE[d]
+           }
+        } 
+        #compare the molt scores at the CWT-defined dates of offset of pre-basic molt with the baseline score
+        if ((off1real %in% example_data$DATE)){
+            #if the molt score on the CWT-defined date of offset of pre-basic plumage molt
+            #is larger than baseline, re-set the offset date to     
+            #the first date after the cwt-defined one, when molt score was equal to or smaller than the baseline value 
+            if (example_data[example_data$DATE==off1real,]$PLUM>base){
+                b<-which(example_data$PLUM<=base & example_data$DATE>off1real)[1]
+                onoffsets[onoffsets$Year==unique(onoffsets$Year)[i-1],]$offsetcor_2<-example_data$DATE[b]
+                #otherwise, re-set the offset date before the CWT-defined offset,
+                #to the next date after the last date, when the molt score was larger than the baseline value
+            } else {
+                b<-rev(which(example_data$PLUM>base & example_data$DATE<=off1real))[1]+1
+                onoffsets[onoffsets$Year==unique(onoffsets$Year)[i-1],]$offsetcor_2<-example_data$DATE[b]
+            }
+        }
+        #if the CWT-defined onset and/or offset date do not exist, or the period between them is 0,
+        #then set onset and offset dates as the cwt-defined onset and offset.
+    } else {
+        onoffsets[onoffsets$Year==unique(onoffsets$Year)[i],]$onsetcor_1<-onreal
+    onoffsets[onoffsets$Year==unique(onoffsets$Year)[i-1],]$offsetcor_2<-off1real
+    }
 }
 ```
 
