--- a/CWT_suppl.rmd
+++ b/CWT_suppl.rmd
@@ -182,23 +182,19 @@ Calculate offsets of body mass decrease, based on the corresponding centered ons
 onoffsets$off_rel<-as.numeric(onoffsets$on_rel+(onoffsets$offsetcor-onoffsets$onsetcor))
 ```
 
-
-
 ##Part 2 - Plumage molt
 
 ###Prepare the data for CWT
-
 ```{r, eval = F}
 Data<-(approx(example_data$DATE[Order],y=example_data$PLUM[Order], xout=Xout))
 Data_vec<-Data$y
-variance = sd(Data_vec)^2;
-m_data=mean(Data_vec);
-Data_vec_centered = (Data_vec - m_data)/sqrt(variance) ;
+variance = sd(Data_vec)^2
+m_data=mean(Data_vec)
+Data_vec_centered = (Data_vec - m_data)/sqrt(variance)
 ```
 
 ###CWT
 Set parameters
-
 ```{r, eval = F}
 n = length(Data_vec_centered);
 dt = 1/365;
@@ -207,7 +203,6 @@ pad = 1;
 dj=7/365;
 s0=64
 mother="paul"
- 
 d<-cbind(Time, Data_vec_centered)
 ```
 
@@ -225,13 +220,11 @@ plot(tmp)
 Choose frequency band
 
 ```{r, eval = F}
-Cdelta=3.476;
-
+Cdelta=3.476
 Ind<-which(tmp$period>=75 & tmp$period<=1000)
 ```
 
 Assess amplitude
-
 ```{r, eval = F}
 red_power=tmp$power[Ind,]
 red_power=tmp$power.corr[Ind,]
@@ -257,14 +250,14 @@ for (i in 1:length(Time)) {
         I_pksA[ki]=I_pks[ki];
     }
     if(I_pksA[1]==0)   {     
-        maxpower=max(red_power[,i]);
-        posfreq1=which.max(red_power[,i]);
+        maxpower=max(red_power[,i])
+        posfreq1=which.max(red_power[,i])
     } else {
-        posfreq1=loc[I_pks[1]];
-        maxpower=pks[I_pks[1]];
+        posfreq1=loc[I_pks[1]]
+        maxpower=pks[I_pks[1]]
     }
-    cf11=(variance*dt)/(Cdelta*red_scale[posfreq1]);
-    cf1=sqrt(cf11);
+    cf11=(variance*dt)/(Cdelta*red_scale[posfreq1])
+    cf1=sqrt(cf11)
     insamp=c(insamp, cf1*red_AP_real[posfreq1,i])
     insamp2=c(insamp2, red_AP_real[posfreq1,i])
 }
@@ -420,68 +413,56 @@ The above code does not allow to find onset date of pre-alternate plumage molt f
 
 ```{r, eval = F}
 #First year onset of pre-alternate molt
-
 firstyr<-onoffsets[which.min(onoffsets$Year),]
 onreal<-firstyr$onsetcor
 plat<-example_data[example_data$DATE<=onreal & example_data$DATE>(onreal-300),]
 
 if (nrow(plat)>0){
-
-nr<-data.frame(matrix(nrow=7,ncol=2))
-for(b in 1:length(unique(plat$PLUM))){
-nr$X1[b]<-nrow(plat[plat$PLUM==unique(plat$PLUM)[b],])
-nr$X2[b]<-unique(plat$PLUM)[b]
-}
-nr<-nr[!is.na(nr$X1),]
-base<-min(nr[nr$X1==max(nr$X1),]$X2)
-if (base>4){
-base<-4
-}
-if (onreal %in% example_data$DATE){
-if (example_data[example_data$DATE==onreal,]$PLUM>base){
-d<-rev(which(example_data$PLUM<=base & example_data$DATE<onreal))[1]
-onoffsets[onoffsets$Year==firstyr$Year,]$onsetcor_1<-example_data$DATE[d]
-
+    nr<-data.frame(matrix(nrow=7,ncol=2))
+    for(b in 1:length(unique(plat$PLUM))){
+    nr$X1[b]<-nrow(plat[plat$PLUM==unique(plat$PLUM)[b],])
+    nr$X2[b]<-unique(plat$PLUM)[b]
+    }
+    nr<-nr[!is.na(nr$X1),]
+    base<-min(nr[nr$X1==max(nr$X1),]$X2)
+    if (base>4) base<-4
+    if (onreal %in% example_data$DATE){
+        if (example_data[example_data$DATE==onreal,]$PLUM>base){
+            d<-rev(which(example_data$PLUM<=base & example_data$DATE<onreal))[1]
+            onoffsets[onoffsets$Year==firstyr$Year,]$onsetcor_1<-example_data$DATE[d]
+        } else {
+            d<-which(example_data$PLUM>base & example_data$DATE>onreal)[1]-1
+            onoffsets[onoffsets$Year==firstyr$Year,]$onsetcor_1<-example_data$DATE[d]
+        }
+    }
 } else {
-d<-which(example_data$PLUM>base & example_data$DATE>onreal)[1]-1
-onoffsets[onoffsets$Year==firstyr$Year,]$onsetcor_1<-example_data$DATE[d]
-
+    example_data[example_data$Year==lastyr$Year,]$onsetcor_1<-onreal
 }
-}
-} else {
-example_data[example_data$Year==lastyr$Year,]$onsetcor_1<-onreal
-}
-
 
 #Last year offset of pre-basic molt
 lastyr<-onoffsets[which.max(onoffsets$Year),]
-
 off1real<-lastyr$offsetcor
 plat<-example_data[example_data$DATE>=off1real & example_data$DATE<(off1real+300),]
-
 if (nrow(plat)>0){
-
-nr<-data.frame(matrix(nrow=7,ncol=2))
-for(b in 1:length(unique(plat$PLUM))){
-nr$X1[b]<-nrow(plat[plat$PLUM==unique(plat$PLUM)[b],])
-nr$X2[b]<-unique(plat$PLUM)[b]
-}
-nr<-nr[!is.na(nr$X1),]
-base<-min(nr[nr$X1==max(nr$X1),]$X2)
-if (base>4){
-base<-4
-}
-if ((off1real %in% example_data$DATE)){
-if (example_data[example_data$DATE==off1real,]$PLUM>base){
-b<-which(example_data$PLUM<=base & example_data$DATE>off1real)[1]
-onoffsets[onoffsets$Year==lastyr$Year,]$offsetcor_2<-example_data$DATE[b]
+    nr<-data.frame(matrix(nrow=7,ncol=2))
+    for(b in 1:length(unique(plat$PLUM))){
+        nr$X1[b]<-nrow(plat[plat$PLUM==unique(plat$PLUM)[b],])
+        nr$X2[b]<-unique(plat$PLUM)[b]
+    }
+    nr<-nr[!is.na(nr$X1),]
+    base<-min(nr[nr$X1==max(nr$X1),]$X2)
+    if (base>4) base<-4
+    if ((off1real %in% example_data$DATE)){
+        if (example_data[example_data$DATE==off1real,]$PLUM>base){
+            b<-which(example_data$PLUM<=base & example_data$DATE>off1real)[1]
+            onoffsets[onoffsets$Year==lastyr$Year,]$offsetcor_2<-example_data$DATE[b]
+        } else {
+            b<-rev(which(example_data$PLUM>base & example_data$DATE<=off1real))[1]+1
+            onoffsets[onoffsets$Year==lastyr$Year,]$offsetcor_2<-example_data$DATE[b]
+        }
+    }
 } else {
-b<-rev(which(example_data$PLUM>base & example_data$DATE<=off1real))[1]+1
-onoffsets[onoffsets$Year==lastyr$Year,]$offsetcor_2<-example_data$DATE[b]
-}
-}
-} else {
-onoffsets[onoffsets$Year==lastyr$Year,]$offsetcor_2<-off1real
+    onoffsets[onoffsets$Year==lastyr$Year,]$offsetcor_2<-off1real
 }
 ```
 
